Updat : documentacao e formatacao do readme
